...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Halaman Berikutnya'),
      ),
      body: Column(
        children: [
          Center(
            child: Text('Selamat datang di halaman berikutnya!'),
          ),
...
